# svg3d-rs

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
src/: main.rs
