[package]
name = "svg3d-rs"
version = "0.1.0"
authors = ["Clark Kampfe <clark.kampfe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.18.0"
svg = "0.5"
nom_stl = { git = "ssh://git@github.com/fast-radius/nom_stl", rev = "891929f", features = ["hashbrown"] }
memmap = "0.7.0"
